fix slider not showing in safari

--- a/public/components/shell/shell.css
+++ b/public/components/shell/shell.css
@@ -5,8 +5,7 @@
     width: 100%;
 }
 
-.shell-header,
-.shell-footer {
+.shell-header, .shell-footer {
     font-size: 5vh;
     width: 100%;
     position: fixed;
@@ -22,13 +21,18 @@
     top: 0;
 }
 
+.shell input[type=range]::-webkit-slider-runnable-track {
+    /* seems otherwise the slider does not display on Safari on black background - the slider is ugly, but at least appears with this, 
+       and I don't want to add more CSS to work around obvious bugs from a browser vendor who has enough money to pay an army of developers to just fix it */
+    background-color: gray;
+}
+
 .shell-footer {
     bottom: 0;
     flex-direction: row;
 }
 
-.shell-footer-left,
-.shell-footer-right {
+.shell-footer-left, .shell-footer-right {
     width: 50%;
     height: 100%;
     background-position: center;
